--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.3",
+    "formkit": "^1.6.9",
     "vue": "^3.5.18",
     "vue-router": "4"
   },
